Add user features

--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -11,7 +11,7 @@
   <div id="flash-message">{{ utils.flashed_messages() }} </div>
   <br/>
   <div class="center">
-    <h1>Sign in to access your account</h1>
+    <h1>Inicia sesión para acceder a tu cuenta</h1>
     <br/>
     {{ wtf.quick_form(form) }}
   </div>
