--- a/src/templates/auth/registro.html
+++ b/src/templates/auth/registro.html
@@ -4,7 +4,7 @@
 {% block body %}
 <div class="content-section">
   <div class="center">
-    <h1>Sign up for testing your knowledge</h1>
+    <h1>Regístrate para ser parte de nuestra increíble tienda.</h1>
     <br/>
     {{ wtf.quick_form(form) }}
   </div>
