--- a/src/templates/home/index.html
+++ b/src/templates/home/index.html
@@ -6,8 +6,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-message">
-                    <h1>My Company Name</h1>
-                    <h3>¡Bienvenido al nombre de mi empresa!</h3>
+                    <h1>Maria Online Store</h1>
+                    <h3>¡Bienvenido(a) a tu tienda!</h3>
                     <hr class="intro-divider">
                 </div>
             </div>
