--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>{{ title }} | My Company Name</title>
+    <title>{{ title }} | Maria Online Store</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
@@ -17,7 +17,8 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">My Company Name</a>
+              <!-- Top bar -->
+              <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">Maria Online Store</a>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
@@ -28,7 +29,7 @@
                     <li><a href="{{ url_for('admin.lista_usuarios') }}">Usuarios</a></li>
                   {% else %}
                     <li><a href="{{ url_for('home.dashboard') }}">Dashboard</a></li>
-                    <li><a href="{{ url_for('user.usuario_detalles') }}">Editar detalles</a></li>
+                    <li><a href="{{ url_for('usuario.usuario_detalles') }}">Editar detalles</a></li>
                   {% endif %}
                   <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
                   <li><a><i class="fa fa-user"></i> ¡Hola, {{ current_user.username }}!</a></li>
