--- a/src/templates/home/dashboard.html
+++ b/src/templates/home/dashboard.html
@@ -8,51 +8,32 @@
             <div class="col-lg-12">
                 <div class="intro-message">
                     {% if no_result_yet %}
-                    <h1>Aún no tienes resultado</h1>
-                    <h3>Try check your knowledge first </h3>
+                        <h1>No hay productos comprados anteriormente.</h1>
+                        <h3>¿Te gusta comprar algo?</h3>
                     {% else %}
-                    <h1>Your global position: {{ user_position }} </h1>
-                    <h3> {{ user_score }} points </h3>
-                    {% endif %}
-                    <hr class="intro-divider">
-                    <div class="inner">
-                        <h4 style="text-align:center;">Ranking</h4>
-                        {% if first_10 %}
-                        <hr class="intro-divider">
+                        <h3>Productos Comprados</h3>
+                        <div class="inner">
                         <div class="center">
                             <table class="table table-striped table-bordered">
                               <thead>
                                 <tr>
-                                  <th width="auto"> Position </th>
-                                  <th width="auto"> Username </th>
-                                  <th width="auto"> Total Score </th>
+                                  <th width="auto"> Producto </th>
+                                  <th width="auto"> Precio </th>
                                 </tr>
                               </thead>
                               <tbody>
-                              {% for user in first_10 %}
+                              {% for producto in productos %}
                                 <tr>
                                   <td> {{ loop.index0 + 1 }} </td>
-                                  <td> {{ user[0] }} </td>
-                                  <td> {{ user[1] }} </td>
+                                  <td> {{ producto[0] }} </td>
+                                  <td> {{ producto[1] }} </td>
                                 </tr>
                               {% endfor %}
                               </tbody>
                             </table>
                         </div>
-                        <div style="text-align: center">
-                        {% else %}
-                            <div style="text-align: center">
-                                <h3> There is no ranking yet. </h3>
-                                <hr class="intro-divider">
-                        {% endif %}
-                                <a href="{{ url_for('user.generate_a_quiz') }}" class="btn btn-default btn-lg">
-                                    <i class="fa fa-play"></i>
-                                    Check your knowledge
-                                </a><br/>
-                            </div>
-                        </div>
                     </div>
-
+                    {% endif %}
                 </div>
             </div>
         </div>
