--- a/src/templates/usuario/user.html
+++ b/src/templates/usuario/user.html
@@ -1,13 +1,13 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
-{% block title %} Edit User {% endblock %}
+{% block title %} Editar Usuario {% endblock %}
 {% block body %}
 <div class="content-section">
  <div class="outer">
     <div class="middle">
       <div class="inner">
         <div class="center">
-            <h1> Edit User </h1>
+            <h1> Editar Usuario </h1>
             <br/>
             {{ wtf.quick_form(form) }}
         </div>
