--- a/src/templates/usuario/users.html
+++ b/src/templates/usuario/users.html
@@ -1,6 +1,6 @@
 {% import "bootstrap/utils.html" as utils %}
 {% extends "base.html" %}
-{% block title %} User Detail {% endblock %}
+{% block title %} Detalles del Usuario {% endblock %}
 {% block body %}
 <div class="content-section">
   <div class="outer">
@@ -9,26 +9,28 @@
         <br/>
         {{ utils.flashed_messages() }}
         <br/>
-        <h1 style="text-align:center;">User</h1>
+        <h1 style="text-align:center;">Usuario</h1>
           <hr class="intro-divider">
           <div class="center">
             <table class="table table-striped table-bordered">
               <thead>
                 <tr>
-                  <th width="30%"> Fullname </th>
-                  <th width="15%"> Username </th>
-                  <th width="25%"> E-mail </th>
-                  <th width="10%"> Edit </th>
+                  <th> Nombre </th>
+                  <th> Apellido </th>
+                  <th> Username </th>
+                  <th> E-mail </th>
+                  <th> Editar </th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td> {{ user.fullname }} </td>
-                  <td> {{ user.username }} </td>
-                  <td> {{ user.email }} </td>
+                  <td> {{ usuario.nombre }} </td>
+                  <td> {{ usuario.apellido }} </td>
+                  <td> {{ usuario.username }} </td>
+                  <td> {{ usuario.email }} </td>
                   <td>
-                    <a href="{{ url_for('user.edit_users', id=user.id) }}">
-                      <i class="fa fa-pencil"></i> Edit
+                    <a href="{{ url_for('usuario.editar_usuario', usuario_id=usuario.id) }}">
+                      <i class="fa fa-pencil"></i> Editar
                     </a>
                   </td>
                 </tr>
