remove folder migrations for now

--- a/src/templates/productos/productos.html
+++ b/src/templates/productos/productos.html
@@ -41,7 +41,7 @@
               </tbody>
             </table>
             <!-- ... (other parts of the file) -->
-            <div><button type="submit" class="buy-button">Comprar productos</button></div>
+            <div><button type="submit" class="btn-default">Comprar productos</button></div>
           </form>
           <div class="pagination">
                 <ul class="pagination">
