--- a/src/templates/admin/productos/productos.html
+++ b/src/templates/admin/productos/productos.html
@@ -1,5 +1,5 @@
 {% import "bootstrap/utils.html" as utils %}
-{% extends "base.html" %}
+{% extends 'admin/master.html' %}
 {% block title %} Questions {% endblock %}
 {% block body %}
 <script type="text/javascript">
