--- a/src/templates/admin/productos/producto.html
+++ b/src/templates/admin/productos/producto.html
@@ -1,5 +1,5 @@
 {% import "bootstrap/wtf.html" as wtf %}
-{% extends "base.html" %}
+{% extends 'admin/master.html' %}
 {% block title %}
     {% if add_question %}
         Add Question
