--- a/src/templates/admin/usuarios/usuario.html
+++ b/src/templates/admin/usuarios/usuario.html
@@ -1,5 +1,5 @@
 {% import "bootstrap/wtf.html" as wtf %}
-{% extends "base.html" %}
+{% extends 'admin/master.html' %}
 {% block title %} Edit User {% endblock %}
 {% block body %}
 <div class="content-section">
