--- a/src/templates/usuarios/users.html
+++ b/src/templates/usuarios/users.html
@@ -2,6 +2,9 @@
 {% extends "base.html" %}
 {% block title %} Detalles del Usuario {% endblock %}
 {% block body %}
+<script type="text/javascript">
+  window.setTimeout("document.getElementById('flash-message').style.display='none';", 2500);
+</script>
 <div class="content-section">
   <div class="outer">
     <div class="middle">
