Use cool pictures to the sample products
Fix the review_checkout and confirm_checkout pages

--- a/src/templates/admin/index.html
+++ b/src/templates/admin/index.html
@@ -2,7 +2,6 @@
 {% block body %}
 {{ super() }}
 <div class="row-fluid">
-
   <div>
     {% if current_user.is_authenticated and current_user.is_admin %}
     <h1>Panel de Admin</h1>
@@ -10,30 +9,45 @@
       Bienvenido al panel de administración.
     </p>
     {% else %}
-    <form method="POST" action="">
-      {{ form.hidden_tag() if form.hidden_tag }}
-      {% for f in form if f.type != 'CSRFTokenField' %}
-      <div class="form-group">
-        {{ f.label }}<br>
-        {{ f }}
-        {% if f.errors %}
-        <ul>
-          {% for e in f.errors %}
-          <li>{{ e }}</li>
-          {% endfor %}
-        </ul>
+      <div id="flash-messages">
+        {% if session.get('flash_message') %}
+          <div class="alert alert-{{ session['flash_category'] }}" role="alert">
+            {{ session['flash_message'] }}
+          </div>
+          {% set _ = session.pop('flash_message', None) %}
+          {% set _ = session.pop('flash_category', None) %}
         {% endif %}
       </div>
-      {% endfor %}
-      <button class="btn btn-primary" type="submit">Submit</button>
-    </form>
-    {{ link | safe }}
+      <form method="POST" action="">
+        {{ form.hidden_tag() if form.hidden_tag }}
+        {% for field in form if field.type != 'CSRFTokenField' %}
+        <div class="form-group">
+          {{ field.label }}<br>
+          {{ field }}
+          {% if field.errors %}
+          <ul>
+            {% for error in field.errors %}
+            <li class="error">{{ error }}</li>
+            {% endfor %}
+          </ul>
+          {% endif %}
+        </div>
+        {% endfor %}
+        <button class="btn btn-primary" type="submit"> Submit </button>
+        <a class="btn btn-primary" href="/"><i class="icon-arrow-left icon-white"></i> Back </a>
+      </form>
+      {{ link | safe }}
     {% endif %}
   </div>
-  <div>
-    <p>
-      <a class="btn btn-primary" href="/"><i class="icon-arrow-left icon-white"></i> Back</a>
-    </p>
-  </div>
 </div>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    setTimeout(function() {
+      var flashMessages = document.getElementById('flash-messages');
+      if (flashMessages) {
+        flashMessages.style.display = 'none';
+      }
+    }, 3500); // Adjust the timeout value as needed
+  });
+</script>
 {% endblock body %}
