--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -191,3 +191,67 @@ button:active {
 .progress--countdown::-moz-progress-bar {
     background-color: #65F596;
 }
+
+.custom-button {
+    width: 2000px;
+    height: 400px;
+}
+
+.carousel-inner .item {
+    height: 380px;
+    overflow: hidden;
+}
+
+.carousel-content {
+    position: relative;
+    text-align: center;
+    padding: 20px;
+}
+
+.product-image img {
+    max-width: 100%;
+    max-height: 200px;
+    display: block;
+    margin: 0 auto;
+}
+
+.product-description {
+    margin-top: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.carousel-buttons {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.carousel-indicators {
+    position: absolute;
+    bottom: -20px;
+    left: 80%;
+    transform: translateX(-50%);
+}
+
+.carousel-indicators li {
+    background-color: #333;
+    border: 2px solid #fff;
+    width: 10px;
+    height: 10px;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.carousel-indicators .active {
+    background-color: gray;
+}
+
+.thumbnail-img {
+    max-width: 50px; /* Adjust the maximum width as needed */
+    max-height: 50px; /* Adjust the maximum height as needed */
+    display: block;
+    margin: 0 auto; /* Center horizontally */
+}
