--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
     <title>{{ title }} | Maria Online Store</title>
+    <!-- Bootstrap CSS (version 3) -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <!-- Favicon -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 </head>
 <body>
+
+    <!-- Navbar content -->
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
           <div class="navbar-header">
@@ -48,6 +54,8 @@
       {% block body %}
       {% endblock %}
     </div>
+
+    <!-- Footer content -->
     <footer>
         <div class="container">
             <div class="row">
@@ -74,5 +82,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
