--- a/src/templates/home/index.html
+++ b/src/templates/home/index.html
@@ -9,6 +9,43 @@
                     <h1>Maria Online Store</h1>
                     <h3>¡Bienvenido(a) a tu tienda!</h3>
                     <hr class="intro-divider">
+                    <!-- Carousel HTML (Bootstrap 3) -->
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            {% for product in carousel_products %}
+                            <div class="item {% if loop.first %} active {% endif %}">
+                                <div class="carousel-content">
+                                    <h3>{{ product.nombre }}</h3>
+                                    <div class="product-image">
+                                        <img src="{{ url_for('producto.get_producto_image', producto_id=product.id) }}" alt="Product Image">
+                                    </div>
+                                    <p class="product-description">{{ product.descripcion }}</p>
+                                </div>
+                                <div class="carousel-buttons">
+                                    <a href="{{ url_for('producto.buy_products', producto_id=product.id) }}"  method="post" class="btn btn-primary">Buy Now</a>
+                                </div>
+                            </div>
+                            {% endfor %}
+                        </div>
+
+                        <!-- Pagination Indicators -->
+                        <ol class="carousel-indicators">
+                            {% for product in carousel_products %}
+                                <li data-target="#carousel-example-generic" data-slide-to="{{ loop.index0 }}" {% if loop.first %}class="active"{% endif %}></li>
+                            {% endfor %}
+                        </ol>
+
+                        <!-- Controls -->
+                        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
