--- a/src/templates/productos/productos.html
+++ b/src/templates/productos/productos.html
@@ -6,9 +6,6 @@
   <div class="outer">
     <div class="middle">
       <div class="inner">
-        <br/>
-        {{ utils.flashed_messages() }}
-        <br/>
         <h1 style="text-align:center;">Producto</h1>
         <hr class="intro-divider">
         <div class="center">
@@ -16,6 +13,7 @@
             <table class="table table-striped table-bordered" style="margin: auto;">
               <thead>
                 <tr>
+                  <th style="width: 10%;"> Imagen </th>
                   <th style="width: 25%;"> Nombre </th>
                   <th style="width: 30%;"> Descripción </th>
                   <th style="width: 10%;"> Categoria </th>
@@ -27,6 +25,11 @@
               <tbody>
                 {% for producto in productos.items %}
                 <tr>
+                  <td>
+                    <a href="#" onclick="showLargeImage('{{ url_for('producto.get_producto_image', producto_id=producto.id) }}'); return false;">
+                        <img src="{{ url_for('producto.get_producto_image', producto_id=producto.id) }}" class="thumbnail-img" alt="Product Image">
+                    </a>
+                  </td>
                   <td> {{ producto.nombre }}</td>
                   <td> {{ producto.descripcion }}</td>
                   <td> {{ producto.categoria }}</td>
@@ -40,9 +43,10 @@
                 {% endfor %}
               </tbody>
             </table>
-            <!-- ... (other parts of the file) -->
             <div><button type="submit" class="btn-default">Comprar productos</button></div>
           </form>
+
+          <!-- Pagination products per 10 -->
           <div class="pagination">
                 <ul class="pagination">
                     {% if productos.has_prev %}
@@ -71,8 +75,19 @@
     </div>
   </div>
 </div>
+
+<!-- Modal for displaying larger image -->
+<div class="modal fade" id="largeImageModal" tabindex="-1" role="dialog" aria-labelledby="largeImageModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <img id="largeImage" src="" class="img-responsive" alt="Large Product Image">
+      </div>
+    </div>
+  </div>
+</div>
+
 <script>
-    window.setTimeout("document.getElementById('flash-message').style.display='none';", 2500);
     document.addEventListener("DOMContentLoaded", function () {
         // Add event listeners to checkboxes
         document.querySelectorAll('input[name="selected_products[]"]').forEach(function (checkbox) {
@@ -89,6 +104,11 @@
         } else {
             quantityInput.setAttribute("disabled", "disabled");
         }
+    }
+
+    function showLargeImage(imageUrl) {
+      $('#largeImage').attr('src', imageUrl);
+      $('#largeImageModal').modal('show');
     }
 </script>
 {% endblock %}
