--- a/src/templates/productos/confirm_checkout.html
+++ b/src/templates/productos/confirm_checkout.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Checkout Confirmed{% endblock %}
+{% block title %}Pago confirmado{% endblock %}
 {% block body %}
 <div class="content-section">
   <div class="outer">
@@ -26,7 +26,7 @@
           </tbody>
         </table>
         <div style="text-align:center;">
-          <a href="{{ url_for('producto.lista_productos') }}" class="btn-default">Volver a la lista de selección de productos</a>
+          <a href="{{ url_for('producto_bp.lista_productos') }}" class="btn-default">Volver a la lista de selección de productos</a>
         </div>
       </div>
     </div>
