--- a/src/templates/home/dashboard.html
+++ b/src/templates/home/dashboard.html
@@ -2,44 +2,52 @@
 {% extends "base.html" %}
 {% block title %} Home Dashboard {% endblock %}
 {% block body %}
-<div class="intro-header">
+<script type="text/javascript">
+  window.setTimeout("document.getElementById('flash-message').style.display='none';", 2500);
+</script>
+<div class="content-section">
+  <br/>
+  <div id="flash-message">{{ utils.flashed_messages() }} </div>
+  <br/>
+  <div class="intro-header">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="intro-message">
-                    {% if is_empty %}
-                        <h1>No hay productos comprados anteriormente.</h1>
-                    {% else %}
-                        <h3>Productos Comprados</h3>
-                        <div class="inner">
-                        <div class="center">
-                            <table class="table table-striped table-bordered">
-                              <thead>
-                                <tr>
-                                  <th width="auto"> Artículo </th>
-                                  <th width="auto"> Producto </th>
-                                  <th width="auto"> Cantidad </th>
-                                  <th width="auto"> Precio </th>
-                                </tr>
-                              </thead>
-                              <tbody>
-                              {% for producto, total_quantity in products %}
-                                <tr>
-                                  <td> {{ loop.index0 + 1 }} </td>
-                                  <td> {{ producto.nombre }} </td>
-                                  <td> {{ total_quantity }} </td>
-                                  <td> {{ producto.precio }} </td>
-                                </tr>
-                              {% endfor %}
-                              </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    {% endif %}
-                    <h3>¿Te gusta comprar algo? <a href="{{ url_for('producto_bp.lista_productos') }}">Haz clic aquí y disfrútalo</a></h3>
-                </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="intro-message">
+            {% if is_empty %}
+            <h1>No hay productos comprados anteriormente.</h1>
+            {% else %}
+            <h3>Productos Comprados</h3>
+            <div class="inner">
+              <div class="center">
+                <table class="table table-striped table-bordered">
+                  <thead>
+                  <tr>
+                    <th width="auto"> Artículo </th>
+                    <th width="auto"> Producto </th>
+                    <th width="auto"> Cantidad </th>
+                    <th width="auto"> Precio </th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  {% for producto, total_quantity in products %}
+                  <tr>
+                    <td> {{ loop.index0 + 1 }} </td>
+                    <td> {{ producto.nombre }} </td>
+                    <td> {{ total_quantity }} </td>
+                    <td> {{ producto.precio }} </td>
+                  </tr>
+                  {% endfor %}
+                  </tbody>
+                </table>
+              </div>
             </div>
+            {% endif %}
+            <h3>¿Te gusta comprar algo? <a href="{{ url_for('producto_bp.lista_productos') }}">Haz clic aquí y disfrútalo</a></h3>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
 {% endblock %}
